--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-DATABASE_URL=postgresql://lio:Astrobest7@localhost:5432/paonahora
+DATABASE_URL=psql 'postgresql://neondb_owner:npg_AXrJoxnO7Z6G@ep-curly-haze-adsxltvo-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 
 # Porta do backend
 PORT=5000
